@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2013/12/02 12:11:52 wiz Exp $
-
-SHA1 (constant-1.27.tar.gz) = 54223c06f492cd9fff118d8613b973c524df13f6
-RMD160 (constant-1.27.tar.gz) = 358741c5a11fe066b4b9d0e665c71c5965f27b7a
-Size (constant-1.27.tar.gz) = 14967 bytes
